--- a/style.css
+++ b/style.css
@@ -1,25 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Roboto:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
 
 
-body{
-
+body {
     margin: 0;
     margin-left: 5%;
     margin-right: 5%;
     background-color: black;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Titillium Web', sans-serif;
+    overflow: scroll;
 }
 
-.grid-container{
-
-   
+.fixed-header {
+    position: sticky;
     display: grid;
-    grid-template-columns: repeat(8,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: 
+    "logo nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap"
+    "logo nav2 nav2 nav2 nav2 nav2 nav2 .";
+    background-image: url(https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/starfield-banner.jpg);
+}
+
+.news {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     grid-gap: 10px;
     grid-template-areas: 
-    "logo . nav nav nav nav nav nav"
-    "logo nav2 nav2 nav2 nav2 nav2 nav2 ."
     "headlines headlines headlines headlines headlines headlines headlines headlines"
     "headlines headlines headlines headlines headlines headlines headlines headlines"
     "news1 news1 news2 news2 news3 news3 news3 news3"
@@ -28,89 +35,182 @@ body{
     "news4 news4 news5 news5 news5 news5 news6 news6";
 }
 
-
 ul {
     list-style-type: none;
-  }
-
- li{
-    border-right: solid 1px white;
-    padding-right: 1.5em;
-    padding-left: 1.5em;
-    
- }
-
- li:last-child { 
-    border:none
- 
 }
-.navbar-div{
-    grid-area: nav;
+
+li:last-child {
+    border-right: none;
+}
+
+.navbar-wrapper {
+    grid-area: nav-wrap;
     color: white;
     display: flex;
-    
+    flex-direction: row;
+    margin-left: 10vw;
 }
 
-.navbar{
-
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding-left: 0;
-}
-
-
-.navbar a{
-
-color: var(--font);
-  text-decoration: none;
-  letter-spacing: px;
-  font-weight: bold;
-  font-size: 0.8em;
- 
+.navbar {
+    grid-area: nav;
+    display: flex;  
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 0;
+    height: 100%;
+    margin: 0;
 }
 
 
-.navbar li::after {
-    content: "";
-    width: 0%;
-    height: 1px;
-    background-color: white;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .navbar li:hover::after {
-    width: 100%;
-  }
+.navbar a {
+    color: var(--font);
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 1em;
+}
 
-  #search-bar{
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
+.navbar li {
+    border-right: solid 0.15vw #5B6367;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60%;
+    padding-right: 0.5vw;
+    padding-left: 0.5vw;
+    font-size: large;
+}
 
-.logo-div{
+.navbar li:last-child {
+    border-right: none;
+}
+
+.search-form {
+    grid-area: search;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    height: 100%;
+}
+
+.search-wrapper {
+    height: 60%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+}
+
+.search-form input {
+    border: none;
+    color: #9E9E9E;
+    background: #333333;
+    height: 100%;
+    width: 50%;
+    font-size: 1em;
+    padding: 0 1vw;
+}
+
+.search-form input:focus {
+    outline: none;
+}
+
+.search-form .search-submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: #333333;
+    height: 100%;
+    width: 25%;
+    cursor: pointer;
+    font-size: 1.1em;
+    z-index: 2;
+}
+
+.search-form .search-share {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: black;
+    height: 100%;
+    width: 25%;
+    cursor: pointer;
+    font-size: 1.1em;
+    z-index: 2;
+}
+
+.logo {
     grid-area: logo;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 13%;
 }
 
-.navbar2{
+.topics-navbar-wrapper {
     grid-area: nav2;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    border-right: 1px;
+    width: 100%;
+    height: 100%;
+}
+
+.topics-navbar {
+    background-color: #404548; /*color from www.nasa.gov*/
+    display: flex;
+    justify-content: center;
+    font-size: small; 
+    width: fit-content;
+    padding: 0;
+    margin: 0;
+    height: 70%;
+}
+
+.topics-navbar li {
+    padding-left: 0.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3em;
+}
+
+.topics-navbar li a {
+    border-right: solid 0.15vw #5B6367;
+}
+
+.topics-navbar li:hover {
+    background-color: #5B6367; /*color from www.nasa.gov*/
+}
+
+.topics-navbar li:last-child a {
+    border-right: none;
+}
+
+.topics-navbar a {
+    color: white;
+    font-weight: bold;
+    font-size: 0.8em;
+    text-decoration: none;
+    padding-right: 0.5vw;
+}
+
+.news div {
     background-color: white;
 }
 
 .headlines{
     grid-area: headlines;
-    background-color: white;
 }
 
 .news1{
     grid-area: news1;
-    background-color: white;
 }
 .news2{
     grid-area: news2;
-    background-color: white;
 }
 .news3{
     grid-area: news3;
