--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ li:last-child {
 .news {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 300px);
+    grid-template-rows: repeat(3, 330px);
    
     grid-gap: 10px;
     grid-template-areas: 
@@ -397,7 +397,11 @@ li:last-child {
 }
 .news4{
     grid-area: news4;
-    background-color: blue;
+    
+}
+
+.news4 video{
+    width: 100%;
 }
 .news5{
     grid-area: news5;
