--- a/style.css
+++ b/style.css
@@ -12,9 +12,7 @@ body {
     font-size: 14px;
 }
 
-
-
-.fixed-header {
+.header--fixed {
     position: sticky;
     top: 0;
     right: 0;
@@ -23,10 +21,10 @@ body {
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas: 
     "logo nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap nav-wrap"
-    "logo nav2 nav2 nav2 nav2 nav2 nav2 .";
+    "logo nav2 nav2 nav2 nav2 nav2 nav2 nav2";
     background-image: url(https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/starfield-banner.jpg);
     z-index: 999;
-    width: 100vw;
+    width: 100%;
 }
 
 ul {
@@ -41,7 +39,7 @@ li:last-child {
     border-right: none;
 }
 
-.navbar-wrapper {
+.navbar__wrapper {
     grid-area: nav-wrap;
     color: white;
     display: flex;
@@ -90,7 +88,7 @@ li:last-child {
     height: 100%;
 }
 
-.search-wrapper {
+.search-form__wrapper {
     height: 60%;
     width: 90%;
     display: flex;
@@ -99,7 +97,7 @@ li:last-child {
     margin-left: 1vw;
 }
 
-.search-form input {
+.search-form__searchBar {
     border: none;
     color: #9E9E9E;
     background: #333333;
@@ -109,11 +107,11 @@ li:last-child {
     padding: 0 1vw;
 }
 
-.search-form input:focus {
+.search-form__searchBar:focus {
     outline: none;
 }
 
-.search-form .search-submit {
+.search-form__submit {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,7 +126,7 @@ li:last-child {
     padding: 1vw;
 }
 
-.search-form .search-share {
+.search-form__share {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -149,7 +147,7 @@ li:last-child {
     margin: 13%;
 }
 
-.topics-navbar-wrapper {
+.topics-navbar__wrapper {
     grid-area: nav2;
     display: flex;
     justify-content: left;
@@ -207,9 +205,6 @@ li:last-child {
     "news4 news5 news5 news6";
 }
 
-
-
-
 .headlines {
     grid-area: headlines;
     overflow: hidden;
@@ -263,36 +258,44 @@ li:last-child {
     display: block;
 }
 
-.news1{
+.news1 {
     grid-area: news1;
-    background-color: rgb(58, 118, 207);
+    background-color: #3A709E;
+    color: white;
+    box-sizing: border-box;
+    height: 100%;
+}
+
+.news1__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: white;
-    padding: 5px 5px;
+    margin: 0 0.5vw;
+    height: inherit;
 }
-.news1-txt p{
+
+.news1__txt p {
     margin: 0;
 }
-.news1-txt h5{
+
+.news1__txt h5 {
     margin: 5px 0;
     border-bottom: solid 1px white;
     font-weight: 400;
    
 }
-.news1-ul{
+.news1__ul {
     display: flex;
     justify-content: space-between;
     padding: 0;
     margin: 0;
     border-top: solid 1px white;
 }
-.news1-ul a{
+.news1__ul a {
     color: white;
 
 }
-.news2{
+.news2 {
     grid-area: news2;
     overflow: hidden;
     background-color: blue;
@@ -300,7 +303,7 @@ li:last-child {
     
 }
 
-.news2 > img{
+.news2 > img {
     display: block;
     object-position: center;
     object-fit: cover;
@@ -309,17 +312,16 @@ li:last-child {
    
 }
 
-
-.news2 > .news2-txt{
+.news2 > .news2__txt {
     position: absolute;
     transform: translateY(-5em);
     
    
-   transition: 200ms ease-in-out; 
+    transition: 200ms ease-in-out; 
 }
 
 
-.news2 h4{
+.news2 h4 {
     background-color: rgba(75, 111, 165, 0.75);
     width: fit-content;
     margin-bottom: 0;
@@ -329,32 +331,31 @@ li:last-child {
     padding-left: 5px;
 }
 
-.news2 p{
+.news2 p {
     background-color: rgba(255, 255, 255, 0.75);
     margin-top: 0;
     padding-left: 5px;
     height: 300px;
 }
 
-.news2-txt:hover{
-
+.news2__txt:hover {
     transform: translateY(-21em);
-   
 }
 
-.news3{
+.news3 {
     grid-area: news3;
     display: flex;
     overflow: hidden;
     
 }
 
-.news3-txt{
+.news3__txt {
     background-color: white;
     width: 50%;
     padding: 0 10px 0 10px;
 }
-.news3-txt h4{
+
+.news3__txt h4 {
     margin-top: 5px;
     margin-bottom: 0px;
     color: rgba(75, 111, 165);
@@ -362,22 +363,25 @@ li:last-child {
     font-size: 1.4em;
 }
 
-.news3-txt span{
+.news3__txt span {
     color: rgba(75, 111, 165);
 }
-.news3-links{
+
+.news3__linksList {
     padding: 0;
 }
-.news3-links a{
+
+.news3__linksList a {
     color: rgba(75, 111, 165);
 }
-.news3-image{
+
+.news3__image {
     width: 50%;
     overflow: hidden;
     
 }
 
-.white-square{
+.news3__whiteSquare {
     height: 50px;
     width: 50px;
     background-color: white;
@@ -385,26 +389,27 @@ li:last-child {
     top: -190px;
     right: -95%;
     transform: rotate(45deg);
-    
 }
-.news3-image > img{
+
+.news3__image > img {
     display: block;
     object-position: center;
     object-fit: cover;
     height: 100%;
     width: 100%;
-   
 }
-.news4{
+
+.news4 {
     grid-area: news4;
     background-color: blue;
 }
-.news5{
+
+.news5 {
     grid-area: news5;
     overflow: hidden;
 }
 
-.news5 > a img{
+.news5 > a img {
     display: block;
     object-position: center;
     object-fit: cover;
@@ -413,14 +418,21 @@ li:last-child {
     transition: 200ms ease-in-out;
 }
 
-
 .news5 > a img:hover{
    transform: scale(1.2);
 }
 
-.news6{
+.news6 {
     grid-area: news6;
-    background-color: blue;
+    background-color: #2A2E37;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+}
+
+footer {
+    height: 10vh;
+    width: 100%;
 }
 
 /* fading animation from https://www.w3schools.com/howto/howto_js_slideshow.asp*/
@@ -444,8 +456,6 @@ li:last-child {
     .navbar-wrapper {
         margin-left: 2vw;
     }
-
-
 }
 
 @media only screen and (max-width: 1000px) {
@@ -463,7 +473,7 @@ li:last-child {
         width: 100%;
     }
 
-
+}
 
 @media only screen and (max-width: 700px) {
     .news {
@@ -483,14 +493,19 @@ li:last-child {
         width: 100%;
     }
     
+    .fixed-header {
+        width: 80vw;
+    }
+    
     [class*="news"] {
-        width: 86vw;
+        width: 80vw;
     }    
 
     .news3{
         flex-direction: column;
         
     }
+
     .white-square{
         height: 50px;
         width: 50px;
@@ -499,6 +514,5 @@ li:last-child {
         top: -25px;
         right: -45%;
         transform: rotate(45deg);
-        
     }
 }
