--- a/style.css
+++ b/style.css
@@ -308,15 +308,25 @@ li:last-child {
     color: white;
 
 }
-.news2 {
+
+
+
+
+/* FIRST ASSIGNMENT */
+
+
+
+    
+    
+    .news2 {
     grid-area: news2;
     overflow: hidden;
-    background-color: blue;
+    background-color: white;
     position: relative;
     
 }
 
-.news2 img {
+    .news2 img {
     display: block;
     object-position: center;
     object-fit: cover;
@@ -324,13 +334,15 @@ li:last-child {
     width: 100%;
    
 }
-
-    .news2__txt {
+    
+    
+    .news2__headline {
     position: absolute;
-    transform: translateY(-5em);
+   
+    width: 100%;
     
    
-    transition: 200ms ease-in-out; 
+    transform: translate(0%, -80%);
 }
 
 
@@ -339,20 +351,30 @@ li:last-child {
     width: fit-content;
     margin-bottom: 0;
     margin-top: 0;
-    padding-right: 1vw;
+    padding-right: 0.5vw;
     color: white;
     padding-left: 0.5vw;
 }
 
-.news2 p {
+.news2__headline p {
     background-color: rgba(255, 255, 255, 0.75);
     margin-top: 0;
-    padding-left: 0.5vw;
-    height: 300px;
+    
+   
 }
 
-.news2__txt:hover {
-    transform: translateY(-21em);
+.news2__txt{
+    
+    background-color: rgba(255, 255, 255, 0.75);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translate(0%, -100%);
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 0;
+    visibility: hidden;
+  
 }
 
 .news3 {
