--- a/sign_in.css
+++ b/sign_in.css
@@ -1,146 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;400;600;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body {
 
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('img/spaceshuttle.jpg');
-  background-position:center top;
-  background-size: cover;
-  font-family: 'Titillium Web', sans-serif;
-  font-size: 14px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/spaceshuttle.jpg');
+    background-position: center top;
+    background-size: cover;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 14px;
 }
 
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 .sign__in__title {
-  text-decoration: underline;
-  text-decoration-color: rgb(143, 10, 10);
-  text-align: center;
-  color: white;
- 
+    text-decoration: underline;
+    text-decoration-color: rgb(143, 10, 10);
+    text-align: center;
+    color: white;
+
 }
 
 
 #main {
-  width: 100%;
-  margin: 3.125em auto 0 auto;
-  margin-bottom: 5em;
+    width: 100%;
+    margin: 3.125em auto 0 auto;
+    margin-bottom: 5em;
 }
 
 label {
-  display: flex;
-  margin-bottom: 0.2em;
-  font-size: 1.125rem;
-  color: white;
+    display: flex;
+    margin-bottom: 0.2em;
+    font-size: 1.125rem;
+    color: white;
 }
 
 form {
 
-  background: rgba(0, 79, 182, 0.3);
-  padding: 2em 1.5em;
-  border-radius: 1%;
-  border: 1px solid rgb(143, 10, 10);
+    background: rgba(0, 79, 182, 0.3);
+    padding: 2em 1.5em;
+    border-radius: 1%;
+    border: 1px solid rgb(143, 10, 10);
 }
 
 @media (min-width: 576px) {
-  #main {
-    max-width: 540px;
-  }
+    #main {
+        max-width: 540px;
+    }
 }
 
 @media (min-width: 768px) {
-  #main {
-    max-width: 720px;
-  }
+    #main {
+        max-width: 720px;
+    }
 }
 
 .form__element {
-  display: block;
-  width: 100%;
-  padding: 0.4em 0.6em;
-  height: 2.5em;
-  border: 1px solid white;
-  border-radius: 0.25em;
-  transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    display: block;
+    width: 100%;
+    padding: 0.4em 0.6em;
+    height: 2.5em;
+    border: 1px solid white;
+    border-radius: 0.25em;
+    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .form__element:focus {
-  border-color: #ebebeb;
-  outline: 0;
-  box-shadow: 0 0 0 0.1rem rgb(143, 10, 10);
+    border-color: #ebebeb;
+    outline: 0;
+    box-shadow: 0 0 0 0.1rem rgb(143, 10, 10);
 }
 
 textarea {
-  resize: none;
+    resize: none;
 }
 
 input,
 textarea,
 button,
 select {
-  font-size: inherit;
-  margin-bottom: 0.5em;
+    font-size: inherit;
+    margin-bottom: 0.5em;
 }
+
 ::placeholder {
-  color: black;
-  opacity: 0.5;
+    color: black;
+    opacity: 0.5;
 }
+
 .form__textarea {
-  width: 100%;
-  min-height: 15vh;
-  border: 1px solid #ebebeb;
-  border-radius: 0.25rem;
-  transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    width: 100%;
+    min-height: 15vh;
+    border: 1px solid #ebebeb;
+    border-radius: 0.25rem;
+    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .form__submit {
-  margin-top: 1em;
-  border: none;
-  background: rgb(143, 10, 10);
-  color: white;
-  padding: 0.5em 0.8em;
-  font-size: 1.5em;
-  letter-spacing: 0.125em;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 0.2s linear;
+    margin-top: 1em;
+    border: none;
+    background: rgb(143, 10, 10);
+    color: white;
+    padding: 0.5em 0.8em;
+    font-size: 1.5em;
+    letter-spacing: 0.125em;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.2s linear;
 }
 
 
 .btn__login__div {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.form__submit:hover
-{
-  background: white;
-  box-shadow: 0px 0px 5px 1px rgb(143, 10, 10);
-  color: rgb(143, 10, 10);
+.form__submit:hover {
+    background: white;
+    box-shadow: 0px 0px 5px 1px rgb(143, 10, 10);
+    color: rgb(143, 10, 10);
 }
 
-.index__link{
-  margin-top: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.index__link {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.index__link a{
-  text-decoration: none;
-  color: white;
-  transition: all 0.2s linear;
+.index__link a {
+    text-decoration: none;
+    color: white;
+    transition: all 0.2s linear;
 }
 
-.index__link a:hover
-{
-  transform: scale(1.1);
+.index__link a:hover {
+    transform: scale(1.1);
 }
